--- a/index.html
+++ b/index.html
@@ -61,6 +61,7 @@ comments: false
         <div class="column one-third">
             {% include sidebar-search.html %}
             {% include sidebar-qrcode.html %}
+            {% include sidebar-popular-repo.html %}
         </div>
     </div>
     <div class="pagination text-align">
